[gd_scene load_steps=6 format=3 uid="uid://biu6h3bwo23ei"]

[ext_resource type="Script" path="res://enemies/fleet_A/fleet_a_ship_02/fleet_a_ship_02_demo.gd" id="1_4xgu6"]
[ext_resource type="Texture2D" uid="uid://crpjvy31e7fte" path="res://assets/level_00.png" id="2_mbgct"]
[ext_resource type="Script" path="res://components/spawner_component.gd" id="3_0ksqm"]
[ext_resource type="PackedScene" uid="uid://djbyrj2odpdpu" path="res://enemies/fleet_A/fleet_a_ship_02/fleet_a_ship_02.tscn" id="3_lyssi"]
[ext_resource type="PackedScene" uid="uid://ci8evpk7jurqt" path="res://ui/demo_generic_menu.tscn" id="3_pr0xy"]

[node name="FleetAShip02Demo" type="Node2D"]
script = ExtResource("1_4xgu6")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(-48, -3711)
texture = ExtResource("2_mbgct")
centered = false

[node name="Spawners" type="Node2D" parent="."]

[node name="SpawningTimer" type="Timer" parent="Spawners"]
wait_time = 3.0
autostart = true

[node name="SpawnerComponent00" type="Node2D" parent="Spawners"]
position = Vector2(150, 65)
script = ExtResource("3_0ksqm")
scene = ExtResource("3_lyssi")
layer_name = "Ships"

[node name="SpawnerComponent01" type="Node2D" parent="Spawners"]
position = Vector2(288, 28)
script = ExtResource("3_0ksqm")
scene = ExtResource("3_lyssi")
layer_name = "Ships"

[node name="SpawnerComponent02" type="Node2D" parent="Spawners"]
position = Vector2(426, 65)
script = ExtResource("3_0ksqm")
scene = ExtResource("3_lyssi")
layer_name = "Ships"

[node name="Ships" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="EnemiesBullets" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DemoGenericMenu" parent="CanvasLayer" instance=ExtResource("3_pr0xy")]
demo_name = "Fleet A Ship 02"
